Update translations for the manager

--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants.properties
@@ -1,30 +1,40 @@
-# Custom messages
+# == Custom messages ==========================================================
 
 CHOOSE_AN_OPTION=Choose an option
 
-# Types for 'EntityType'
-
-ROOT_CONCEPT=Root concept
-
-# Types for 'CategoryType'
-
-EDUCATION_PHASE=Education phase
-EDUCATION_STAGE=Education stage
-ACADEMIC_YEAR=Academic year
-FIELD_OF_STUDY=Field of study
-PROGRAMME_OF_STUDY=Programme of study
-TOPIC_OF_STUDY=Topic of study
-
-# Types for 'context'
-
-HIGHER_EDUCATION=Higher education
-OTHER=Other
-SCHOOL=School
-TRAINING=Training
-
-# Types for 'contributorRole'
+# == Normal user of a learning object (LOMv1.0) ===============================
 
 AUTHOR=Author
+LEARNER=Learner
+MANAGER=Manager
+TEACHER=Teacher
+
+# == Content knowledge type (DUCv3.0) =========================================
+
+UNSPECIFIED=Unspecified
+ATTITUDINAL=Attitudinal
+CONCEPTUAL=Conceptual
+PROCEDURAL=Procedural
+
+# == Whether copyright or other restrictions apply (LOMv1.0) ==================
+
+HAS_RESTRICTIONS=Has restrictions
+WITHOUT_RESTRICTIONS=Without restrictions
+
+# == Content licenses (DUCv3.0) ===============================================
+
+CREATIVE_COMMONS_BY=Creative Commons: Attribution (CC BY)
+CREATIVE_COMMONS_BYSA=Creative Commons: Attribution-ShareAlike (CC BY-SA)
+CREATIVE_COMMONS_BYND=Creative Commons: Attribution-NoDerivatives (CC BY-ND)
+CREATIVE_COMMONS_BYNC=Creative Commons: Attribution-NonCommercial (CC BY-NC)
+CREATIVE_COMMONS_BYNCSA=Creative Commons: Attribution-NonCommercial-ShareAlike (CC BY-NC-SA)
+CREATIVE_COMMONS_BYNCND=Creative Commons: Attribution-NonCommercial-NoDerivatives (CC BY-NC-ND)
+EDU3_EDUCATIONAL=Edu3 educational license
+OTHER_COPYRIGHT=Other copyright licenses
+PUBLIC_DOMAIN=Public domain
+
+# == Lifecycle contributor roles (LOMv1.0) ====================================
+
 CONTENT_PROVIDER=Content provider
 CREATOR=Creator
 EDITOR=Editor
@@ -41,77 +51,59 @@ TERMINATOR=Terminator
 UNKNOWN=Unknown
 VALIDATOR=Validator
 
-# Types for 'Cost'
-
-REQUIRES_PAYMENT=Requires payment
-WITHOUT_CHARGE=Free of charge
-
-# Types for 'Copyright'
-
-CC_BY=Creative Commons: Attribution (CC BY)
-CC_BY_SA=Creative Commons: Attribution-ShareAlike (CC BY-SA)
-CC_BY_ND=Creative Commons: Attribution-NoDerivatives (CC BY-ND)
-CC_BY_NC=Creative Commons: Attribution-NonCommercial (CC BY-NC)
-CC_BY_NC_SA=Creative Commons: Attribution-NonCommercial-ShareAlike (CC BY-NC-SA)
-CC_BY_NC_ND=Creative Commons: Attribution-NonCommercial-NoDerivatives (CC BY-NC-ND)
-EDU3=Edu3
-COPYRIGHT=Other copyright licenses
-PUBLIC_DOMAIN=Public domain
-
-# Types for 'Knowledge'
-
-INDETERMINATE=Indeterminate
-ATTITUDINAL=Attitudinal
-CONCEPTUAL=Conceptual
-PROCEDURAL=Procedural
-
-# Types for 'kind'
-
-IS_PART_OF=Is part of
-HAS_PART=Has part
-IS_VERSION_OF=Is version of
-HAS_VERSION=Has version
-IS_FORMAT_OF=Is format of
-HAS_FORMAT=Has format
-REFERENCES=References
-IS_REFERENCED_BY=Is referenced by
-IS_BASED_ON=Is based on
-IS_BASIS_FOR=Is basis for
-REQUIRES=Requires
-IS_REQUIRED_BY=Is required by
-
-# Types for 'TermType'
-
-FACET_INDICATOR=Facet indicator
-PREFERRED_TERM=Preferred term
-NON_PREFERRED_TERM=Non-preferred term
-
-# Types for 'learningResourceType'
-
-EXERCISE=Exercise
-SIMULATION=Simulation
-QUESTIONNAIRE=Questionnaire
-DIAGRAM=Diagram
-FIGURE=Figure
-GRAPH=Graph
-INDEX=Index
-LECTURE=Lecture
-SLIDE=Slide
-TABLE=Table
-NARRATIVE_TEXT=Narrative text
-EXAM=Exam
-EXPERIMENT=Experiment
-PROBLEM_STATEMENT=Problem statement
-SELF_ASSESMENT=Self assessment
-
-# Types for 'status'
+# == The state or condition of a learning object (LOMv1.0) ====================
 
 DRAFT=Draft
 FINAL=Final
 REVISED=Revised
 UNAVAILABLE=Unavailable
 
-# Types for 'structure'
+# == Physical medium of the resource (DUCv3.0) ================================
+
+# LRE Learning Resource Types (learning asset)
+
+AUDIO=Audio
+DATA=Data
+IMAGE=Image
+TEXT=Text
+VIDEO=Video
+
+# LRE Learning Resource Types (learning resource)
+
+APPLICATION=Application
+EDUCATIONAL_GAME=Educational game
+TEXTBOOK=Textbook
+PRESENTATION=Presentation
+SOCIAL_MEDIA=Social media
+
+# Custom types
+
+BROCHURE=Brochure
+DOSSIER=Dossier
+EQUIPMENT=Equipment
+INTERACTIVE_TEXTBOOK=Interactive textbook
+MAGAZINE=Magazine
+MAP=Map
+MUSICAL_AUDIO=Musical audio
+PHOTOGRAPH=Photograph
+PRINTABLE=Printable
+TEXT_DOCUMENT=Text document
+VISUAL_MEDIA=Visual media
+
+# == Whether use of the resource requires payment (LOMv1.0) ===================
+
+REQUIRES_PAYMENT=Requires payment
+WITHOUT_CHARGE=Free of charge
+
+# == Identifier catalogs types (RFC-8141) =====================================
+
+ISBN=International Standard Book Number (ISBN)
+ISSN=International Standard Serial Number (ISSN)
+LEGAL_DEPOSIT=Legal deposit (NBN)
+MERLI=Internal reference
+OTHER_CATALOG=Another catalog
+
+# == Underlying organizational structure of a learning object (LOMv1.0) =======
 
 ATOMIC=Atomic
 COLLECTION=Collection
@@ -119,29 +111,152 @@ HIERARCHICAL=Hierarchical
 LINEAR=Linear
 NETWORKED=Networked
 
-# Types for 'termRelation'
+# == Educational contexts (LREv3.0) ===========================================
 
-USE=Use
-USE_FOR=Use for
+COMPULSORY_EDUCATION=Compulsory education
+CONTINUING_EDUCATION=Continuing education
+DISTANCE_EDUCATION=Distance education
+EDUCATIONAL_ADMINISTRATION=Educational administration
+HIGHER_EDUCATION=Higher education
+LIBRARY=Library
+POLICY_MAKING=Policy making
+PRESCHOOL=Pre-school
+PROFESSIONAL_DEVELOPMENT=Professional development
+SPECIAL_EDUCATION=Special education
+VOCATIONAL_EDUCATION=Vocational education
+OTHER=Other
+
+# == Classification purpose (LOMv1.0) =========================================
+
+ACCESSIBILITY_RESTRICTIONS=Accessibility restrictions
+COMPETENCY=Competency
+DISCIPLINE=Discipline
+EDUCATIONAL_LEVEL=Educational level
+EDUCATIONAL_OBJECTIVE=Educational objective
+IDEA=Idea
+PREREQUISITE=Prerequisite
+SECURITY_LEVEL=Security level
+SKILL_LEVEL=Skill level
+EDUCATIONAL_CONTEXT=Educational context
+SUBJECT_DESCRIPTOR=Subject descriptor
+
+# == Specific kind of resource (LREv3.0) ======================================
+
+ASSESSMENT=Assessment
+DRILL_AND_PRACTICE=Drill and practice
+EXPLORATION=Exploration
+GLOSSARY=Glossary
+GUIDE=Guide
+OPEN_ACTIVITY=Open activity
+TOOL=Tool
+WEB_PAGE=Web page
+
+# == Relationships types ======================================================
+
+# Generic relationships (DUCv3.0)
+
+ENTITY=Entity
+TERM=Term
+RESOURCE=Resource
+
+# Term relationships (DUCv3.0)
+
 TOP_TERM=Top term
 BROADER_TERM=Broader term
 NARROWER_TERM=Narrower term
 RELATED_TERM=Related term
+USE=Use
+USE_FOR=Use for
 
-# Types for 'UserRole'
+# Resource relationships (LOMv1.0)
 
-LEARNER=Learner
-MANAGER=Manager
-TEACHER=Teacher
+REQUIRES=Requires
+REFERENCES=References
+HAS_PART=Has part
+HAS_VERSION=Has version
+HAS_FORMAT=Has format
+IS_REQUIRED_BY=Is required by
+IS_REFERENCED_BY=Is referenced by
+IS_PART_OF=Is part of
+IS_VERSION_OF=Is version of
+IS_FORMAT_OF=Is format of
+IS_BASED_ON=Is based on
+IS_BASIS_FOR=Is basis for
 
-# Identifier catalogs
+# == Entity types (DUCv3.0) ===================================================
 
-ISBN=ISBN
-ISSN=ISSN
-LEGAL_DEPOSIT=Legal deposit
-OTHER_CATALOG=Another catalog
+# Hierarchy types (DUCv3.0)
 
-# Language names
+ROOT_CONCEPT=Root concept
+CONTENT_CATEGORY=Contenct category
+VOCABULARY_TERM=Vocabulary term
+FREE_TERM=Free term
+
+# Resource types (DUCv3.0)
+
+LEARNING_OBJECT=Learning object
+
+# Category types (DUCv3.0)
+
+EDUCATION_PHASE=Education phase
+EDUCATION_STAGE=Education stage
+ACADEMIC_YEAR=Academic year
+FIELD_OF_STUDY=Field of study
+PROGRAMME_OF_STUDY=Programme of study
+TOPIC_OF_STUDY=Topic of study
+
+# Thesaurus term types (DUCv3.0)
+
+FACET_INDICATOR=Facet indicator
+PREFERRED_TERM=Preferred term
+NON_PREFERRED_TERM=Non-preferred term
+
+# == Technical data type of the learing object (LREv3.0) ======================
+
+APPLICATION_BASE64=Application/base64
+APPLICATION_BINARY=Binary Software
+APPLICATION_JAVA=Java Application
+APPLICATION_MACBINHEX40=Application/macbinhex40
+APPLICATION_MSEXCEL=Microsoft Excel
+APPLICATION_MSWORD=Microsoft Word
+APPLICATION_OGG=Ogg
+APPLICATION_PDF=Adobe Portable Document Format (PDF)
+APPLICATION_POSTSCRIPT=PostScript
+APPLICATION_PPT=Application/ppt
+APPLICATION_RTF=Rich Text Format (RTF)
+APPLICATION_UUE=Unix-to-Unix encoding
+APPLICATION_COMPRESSED=Application/x-compressed
+APPLICATION_GZIP_COMPRESSED=Application/x-gzip-compressed
+APPLICATION_REALMEDIA=Application/x-pn-realmedia
+APPLICATION_SHOCKWAVE_FLASH=Adobe Flash
+APPLICATION_STUFFIT=Stuffit Archive
+APPLICATION_ZIP_COMPRESSED=Application/x-zip-compressed
+APPLICATION_ZIP=Zip Archive
+AUDIO_BASIC=Au file format
+AUDIO_MIDI=Musical Instrument Digital Interface (MIDI)
+AUDIO_MP3=MPEG Audio Layer (MP3)
+AUDIO_MPEG=MPEG Audio
+AUDIO_WAV=Waveform Audio Format (WAV)
+AUDIO_REALAUDIO=Real Audio Sound
+AUDIO_REALAUDIO_PLUGIN=Real Audio Sound Plugin
+IMAGE_BMP=Bitmap Image File (BMP)
+IMAGE_GIF=Graphics Interchange Format (GIF)
+IMAGE_JPEG=JPEG Image (JPG)
+IMAGE_PNG=Portable Network Graphics (PNG)
+IMAGE_TIFF=Tagged Image File Format (TIFF)
+IMAGE_WMF=Windows Metafile (WMF)
+MODEL_VRML=Virtual Reality Modeling Language (VRML)
+TEXT_HTML=HyperText Markup Language (HTML)
+TEXT_PLAIN=Text File
+TEXT_RICHTEXT=Rich Text Format (RTF)
+TEXT_XML=Extensible Markup Language (XML)
+VIDEO_AVI=Audio Video Interleave (AVI)
+VIDEO_MPEG=MPEG Video
+VIDEO_QUICKTIME=Quicktime Video
+VIDEO_REALVIDEO=RealMedia Video
+VIDEO_REALVIDEO_PLUGIN=RealMedia Video Plugin
+
+# == ISO 639-1 languages (LREv3.0) ============================================
 
 AFAR=Afar
 ABKHAZIAN=Abkhazian
