--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_ca.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_ca.properties
@@ -1,30 +1,40 @@
-# Custom messages
+# == Custom messages ==========================================================
 
 CHOOSE_AN_OPTION=Escolliu una opció
 
-# Types for 'EntityType'
-
-ROOT_CONCEPT=Concepte arrel
-
-# Types for 'CategoryType'
-
-EDUCATION_PHASE=Fase educativa
-EDUCATION_STAGE=Etapa educativa
-ACADEMIC_YEAR=Any escolar
-FIELD_OF_STUDY=Camp d'estudi
-PROGRAMME_OF_STUDY=Programa d'estudi
-TOPIC_OF_STUDY=Tema d'estudi
-
-# Types for 'context'
-
-HIGHER_EDUCATION=Educació superior
-OTHER=Un altre
-SCHOOL=Centre
-TRAINING=Formació
-
-# Types for 'contributorRole'
+# == Normal user of a learning object (LOMv1.0) ===============================
 
 AUTHOR=Autor
+LEARNER=Aprenent
+MANAGER=Gerent
+TEACHER=Professor
+
+# == Content knowledge type (DUCv3.0) =========================================
+
+UNSPECIFIED=Sense especificar
+ATTITUDINAL=Actitudinal
+CONCEPTUAL=Conceptual
+PROCEDURAL=Procedural
+
+# == Whether copyright or other restrictions apply (LOMv1.0) ==================
+
+HAS_RESTRICTIONS=Té restriccions
+WITHOUT_RESTRICTIONS=Sense restriccions
+
+# == Content licenses (DUCv3.0) ===============================================
+
+CREATIVE_COMMONS_BY=Creative Commons: Reconeixement (BY)
+CREATIVE_COMMONS_BYSA=Creative Commons: Reconeixement-CompartirIgual (BY-SA)
+CREATIVE_COMMONS_BYND=Creative Commons: Reconeixement-SenseObraDerivada (BY-ND)
+CREATIVE_COMMONS_BYNC=Creative Commons: Reconeixement-NoComercial (BY-NC)
+CREATIVE_COMMONS_BYNCSA=Creative Commons: Reconeixement-NoComercial-CompartirIgual (BY-NC-SA)
+CREATIVE_COMMONS_BYNCND=Creative Commons: Reconeixement-NoComercial-SenseObraDerivada (BY-NC-ND)
+EDU3_EDUCATIONAL=Llicència educacional Edu3
+OTHER_COPYRIGHT=Altres llicències de copyright
+PUBLIC_DOMAIN=Domini públic
+
+# == Lifecycle contributor roles (LOMv1.0) ====================================
+
 CONTENT_PROVIDER=Proveïdor de continguts
 CREATOR=Creador
 EDITOR=Editor
@@ -41,77 +51,59 @@ TERMINATOR=Terminador
 UNKNOWN=Desconegut
 VALIDATOR=Validador
 
-# Types for 'Cost'
-
-REQUIRES_PAYMENT=Requeriex pagament
-WITHOUT_CHARGE=Lliure de càrrecs
-
-# Types for 'Copyright'
-
-CC_BY=Creative Commons: Reconeixement (CC BY)
-CC_BY_SA=Creative Commons: Reconeixement-CompartirIgual (CC BY-SA)
-CC_BY_ND=Creative Commons: Reconeixement-SenseObraDerivada (CC BY-ND)
-CC_BY_NC=Creative Commons: Reconeixement-NoComercial (CC BY-NC)
-CC_BY_NC_SA=Creative Commons: Reconeixement-NoComercial-CompartirIgual (CC BY-NC-SA)
-CC_BY_NC_ND=Creative Commons: Reconeixement-NoComercial-SenseObraDerivada (CC BY-NC-ND)
-EDU3=Edu3
-COPYRIGHT=Altres llicències de copyright
-PUBLIC_DOMAIN=Domini públic
-
-# Types for 'Knowledge'
-
-INDETERMINATE=Indeterminat
-ATTITUDINAL=Actitudinal
-CONCEPTUAL=Conceptual
-PROCEDURAL=Procedural
-
-# Types for 'kind'
-
-IS_PART_OF=És part de
-HAS_PART=Té part
-IS_VERSION_OF=És la versió de
-HAS_VERSION=Té versió
-IS_FORMAT_OF=És format de
-HAS_FORMAT=Té format
-REFERENCES=Referències
-IS_REFERENCED_BY=Està referenciat per
-IS_BASED_ON=Està basat en
-IS_BASIS_FOR=És base per a
-REQUIRES=Requereix
-IS_REQUIRED_BY=És obligatori per
-
-# Types for 'TermType'
-
-FACET_INDICATOR=Indicador de trama
-PREFERRED_TERM=Terme preferit
-NON_PREFERRED_TERM=Terme no preferit
-
-# Types for 'learningResourceType'
-
-EXERCISE=Exercici
-SIMULATION=Simulació
-QUESTIONNAIRE=Qüestionari
-DIAGRAM=Diagrama
-FIGURE=Figura
-GRAPH=Gràfic
-INDEX=Índex
-LECTURE=Conferència
-SLIDE=Diapositiva
-TABLE=Taula
-NARRATIVE_TEXT=Text narratiu
-EXAM=Examen
-EXPERIMENT=Experiment
-PROBLEM_STATEMENT=Plantejament del problema
-SELF_ASSESMENT=Autoavaluació
-
-# Types for 'status'
+# == The state or condition of a learning object (LOMv1.0) ====================
 
 DRAFT=Esborrany
 FINAL=Final
 REVISED=Revisat
 UNAVAILABLE=No disponible
 
-# Types for 'structure'
+# == Physical medium of the resource (DUCv3.0) ================================
+
+# LRE Learning Resource Types (learning asset)
+
+AUDIO=Àudio
+DATA=Dades
+IMAGE=Imatge
+TEXT=Text
+VIDEO=Vídeo
+
+# LRE Learning Resource Types (learning resource)
+
+APPLICATION=Aplicació
+EDUCATIONAL_GAME=Joc educatiu
+TEXTBOOK=Llibre de text
+PRESENTATION=Presentació
+SOCIAL_MEDIA=Mitjà de comunicació social
+
+# Custom types
+
+BROCHURE=Fulletó
+DOSSIER=Dossier
+EQUIPMENT=Equipament
+INTERACTIVE_TEXTBOOK=Llibre de text interactiu
+MAGAZINE=Revista
+MAP=Mapa
+MUSICAL_AUDIO=Àudio musical
+PHOTOGRAPH=Fotografia
+PRINTABLE=Imprimible
+TEXT_DOCUMENT=Document de text
+VISUAL_MEDIA=Mitjà visual
+
+# == Whether use of the resource requires payment (LOMv1.0) ===================
+
+REQUIRES_PAYMENT=Requeriex pagament
+WITHOUT_CHARGE=Lliure de càrrecs
+
+# == Identifier catalogs types (RFC-8141) =====================================
+
+ISBN=International Standard Book Number (ISBN)
+ISSN=International Standard Serial Number (ISSN)
+LEGAL_DEPOSIT=Dipòsit legal (NBN)
+MERLI=Referència interna
+OTHER_CATALOG=Un altre catàleg
+
+# == Underlying organizational structure of a learning object (LOMv1.0) =======
 
 ATOMIC=Atòmica
 COLLECTION=Col·lecció
@@ -119,199 +111,322 @@ HIERARCHICAL=Jeràrquic
 LINEAR=Lineal
 NETWORKED=En xarxa
 
-# Types for 'termRelation'
+# == Educational contexts (LREv3.0) ===========================================
 
-USE=Ús
-USE_FOR=Utilitzat per
+COMPULSORY_EDUCATION=Educació obligatòria
+CONTINUING_EDUCATION=Formació continuada
+DISTANCE_EDUCATION=Educació a distància
+EDUCATIONAL_ADMINISTRATION=Administració educativa
+HIGHER_EDUCATION=Educació superior
+LIBRARY=Biblioteca
+POLICY_MAKING=Formulació de polítiques
+PRESCHOOL=Preescolar
+PROFESSIONAL_DEVELOPMENT=Desenvolupament professional
+SPECIAL_EDUCATION=Educació especial
+VOCATIONAL_EDUCATION=Formació professional
+OTHER=Un altre
+
+# == Classification purpose (LOMv1.0) =========================================
+
+ACCESSIBILITY_RESTRICTIONS=Restriccions d'accessibilitat
+COMPETENCY=Competència
+DISCIPLINE=Disciplina
+EDUCATIONAL_LEVEL=Nivell educatiu
+EDUCATIONAL_OBJECTIVE=Objectiu educatiu
+IDEA=Idea
+PREREQUISITE=Prerequisit
+SECURITY_LEVEL=Nivell de seguretat
+SKILL_LEVEL=Nivell d’habilitat
+EDUCATIONAL_CONTEXT=Context educatiu
+SUBJECT_DESCRIPTOR=Descriptor de matèria
+
+# == Specific kind of resource (LREv3.0) ======================================
+
+ASSESSMENT=Avaluació
+DRILL_AND_PRACTICE=Exercici i pràctica
+EXPLORATION=Exploració
+GLOSSARY=Glossari
+GUIDE=Guia
+OPEN_ACTIVITY=Activitat oberta
+TOOL=Eina
+WEB_PAGE=Pàgina web
+
+# == Relationships types ======================================================
+
+# Generic relationships (DUCv3.0)
+
+ENTITY=Entitat
+TERM=Terme
+RESOURCE=Recurs
+
+# Term relationships (DUCv3.0)
+
 TOP_TERM=Terme superior
 BROADER_TERM=Terme més ampli
 NARROWER_TERM=Terme més reduït
 RELATED_TERM=Terme relacionat
+USE=Ús
+USE_FOR=Utilitzat per
 
-# Types for 'UserRole'
+# Resource relationships (LOMv1.0)
 
-LEARNER=Aprenent
-MANAGER=Gerent
-TEACHER=Professor
+REQUIRES=Requereix
+REFERENCES=Referencia
+HAS_PART=Té part
+HAS_VERSION=Té versió
+HAS_FORMAT=Té format
+IS_REQUIRED_BY=És obligatori per
+IS_REFERENCED_BY=Està referenciat per
+IS_PART_OF=És part de
+IS_VERSION_OF=És la versió de
+IS_FORMAT_OF=És format de
+IS_BASED_ON=Està basat en
+IS_BASIS_FOR=És base per a
 
-# Identifier catalogs
+# == Entity types (DUCv3.0) ===================================================
 
-ISBN=ISBN
-ISSN=ISSN
-LEGAL_DEPOSIT=Dipòsit legal
-OTHER_CATALOG=Un altre catàleg
+# Hierarchy types (DUCv3.0)
 
-# Language names
+ROOT_CONCEPT=Concepte arrel
+CONTENT_CATEGORY=Categoria de continguts
+VOCABULARY_TERM=Terme del vocabulari
+FREE_TERM=Terme lliure
 
+# Resource types (DUCv3.0)
 
-ABKHAZIAN=Abkhaz
+LEARNING_OBJECT=Objecte d''aprenentatge
+
+# Category types (DUCv3.0)
+
+EDUCATION_PHASE=Fase educativa
+EDUCATION_STAGE=Etapa educativa
+ACADEMIC_YEAR=Any escolar
+FIELD_OF_STUDY=Camp d'estudi
+PROGRAMME_OF_STUDY=Programa d'estudi
+TOPIC_OF_STUDY=Tema d'estudi
+
+# Thesaurus term types (DUCv3.0)
+
+FACET_INDICATOR=Indicador de trama
+PREFERRED_TERM=Terme preferit
+NON_PREFERRED_TERM=Terme no preferit
+
+# == Technical data type of the learing object (LREv3.0) ======================
+
+APPLICATION_BASE64=Application/base64
+APPLICATION_BINARY=Binary Software
+APPLICATION_JAVA=Java Application
+APPLICATION_MACBINHEX40=Application/macbinhex40
+APPLICATION_MSEXCEL=Microsoft Excel
+APPLICATION_MSWORD=Microsoft Word
+APPLICATION_OGG=Ogg
+APPLICATION_PDF=Adobe Portable Document Format (PDF)
+APPLICATION_POSTSCRIPT=PostScript
+APPLICATION_PPT=Application/ppt
+APPLICATION_RTF=Rich Text Format (RTF)
+APPLICATION_UUE=Unix-to-Unix encoding
+APPLICATION_COMPRESSED=Application/x-compressed
+APPLICATION_GZIP_COMPRESSED=Application/x-gzip-compressed
+APPLICATION_REALMEDIA=Application/x-pn-realmedia
+APPLICATION_SHOCKWAVE_FLASH=Adobe Flash
+APPLICATION_STUFFIT=Stuffit Archive
+APPLICATION_ZIP_COMPRESSED=Application/x-zip-compressed
+APPLICATION_ZIP=Zip Archive
+AUDIO_BASIC=Au file format
+AUDIO_MIDI=Musical Instrument Digital Interface (MIDI)
+AUDIO_MP3=MPEG Audio Layer (MP3)
+AUDIO_MPEG=MPEG Audio
+AUDIO_WAV=Waveform Audio Format (WAV)
+AUDIO_REALAUDIO=Real Audio Sound
+AUDIO_REALAUDIO_PLUGIN=Real Audio Sound Plugin
+IMAGE_BMP=Bitmap Image File (BMP)
+IMAGE_GIF=Graphics Interchange Format (GIF)
+IMAGE_JPEG=JPEG Image (JPG)
+IMAGE_PNG=Portable Network Graphics (PNG)
+IMAGE_TIFF=Tagged Image File Format (TIFF)
+IMAGE_WMF=Windows Metafile (WMF)
+MODEL_VRML=Virtual Reality Modeling Language (VRML)
+TEXT_HTML=HyperText Markup Language (HTML)
+TEXT_PLAIN=Text File
+TEXT_RICHTEXT=Rich Text Format (RTF)
+TEXT_XML=Extensible Markup Language (XML)
+VIDEO_AVI=Audio Video Interleave (AVI)
+VIDEO_MPEG=MPEG Video
+VIDEO_QUICKTIME=Quicktime Video
+VIDEO_REALVIDEO=RealMedia Video
+VIDEO_REALVIDEO_PLUGIN=RealMedia Video Plugin
+
+# == ISO 639-1 languages (LREv3.0) ============================================
+
 AFAR=Àfar
+ABKHAZIAN=Abkhaz
+AVESTAN=Avèstic
 AFRIKAANS=Afrikaans
 AKAN=Àkan
-ALBANIAN=Albanès
 AMHARIC=Amhàric
-ARABIC=Àrab
 ARAGONESE=Aragonès
-ARMENIAN=Armeni
+ARABIC=Àrab
 ASSAMESE=Assamès
 AVARIC=Àvar
-AVESTAN=Avèstic
 AYMARA=Aimara
 AZERBAIJANI=Azerbaidjanès
-BAMBARA=Bambara
 BASHKIR=Baixkir
-BASQUE=Basc
 BELARUSIAN=Bielorús
-BENGALI=Bengalí
+BULGARIAN=Búlgar
 BIHARI_LANGUAGES=Idiomes bihari
 BISLAMA=Bislama
-BOKMAL_NORWEGIAN=Noruec bokmål
-BOSNIAN=Bosnià
+BAMBARA=Bambara
+BENGALI=Bengalí
+TIBETAN=Tibetà
 BRETON=Bretó
-BULGARIAN=Búlgar
-BURMESE=Birmà
+BOSNIAN=Bosnià
 CATALAN=Català
-CENTRAL_KHMER=Khmer
-CHAMORRO=Chamorro
 CHECHEN=Txetxè
-CHICHEWA=Nyanja
-CHINESE=Xinès
-CHURCH_SLAVIC=Eslau eclesiàstic
-CHUVASH=Txuvaix
-CORNISH=Còrnic
+CHAMORRO=Chamorro
 CORSICAN=Cors
 CREE=Cree
-CROATIAN=Croat
 CZECH=Txec
+CHURCH_SLAVIC=Eslau eclesiàstic
+CHUVASH=Txuvaix
+WELSH=Gal·lès
 DANISH=Danès
+GERMAN=Alemany
 DIVEHI=Divehi
-DUTCH=Neerlandès
 DZONGKHA=Dzongka
+EWE=Ewe
+MODERN_GREEK=Grec
 ENGLISH=Anglès
 ESPERANTO=Esperanto
+SPANISH=Espanyol
 ESTONIAN=Estonià
-EWE=Ewe
-FAROESE=Feroès
-FIJIAN=Fijià
-FINNISH=Finès
-FRENCH=Francès
+BASQUE=Basc
+PERSIAN=Persa
 FULAH=Ful
+FINNISH=Finès
+FIJIAN=Fijià
+FAROESE=Feroès
+FRENCH=Francès
+WESTERN_FRISIAN=Frisó occidental
+IRISH=Irlandès
 GAELIC=Gaèlic escocès
 GALICIAN=Gallec
-GANDA=Ganda
-GEORGIAN=Georgià
-GERMAN=Alemany
 GUARANI=Guaraní
 GUJARATI=Gujarati
-HAITIAN=Haitià
+MANX=Manx
 HAUSA=Haussa
 HEBREW=Hebreu
-HERERO=Herero
 HINDI=Hindi
 HIRI_MOTU=Hiri motu
+CROATIAN=Croat
+HAITIAN=Haitià
 HUNGARIAN=Hongarès
-ICELANDIC=Islandès
-IDO=Ido
-IGBO=Igbo
-INDONESIAN=Indonesi
+ARMENIAN=Armeni
+HERERO=Herero
 INTERLINGUA=Interlingua
+INDONESIAN=Indonesi
 INTERLINGUE=Interlingue
-INUKTITUT=Inuktitut
+IGBO=Igbo
+SICHUAN_YI=Yi sichuan
 INUPIAQ=Inupiak
-IRISH=Irlandès
+IDO=Ido
+ICELANDIC=Islandès
 ITALIAN=Italià
+INUKTITUT=Inuktitut
 JAPANESE=Japonès
 JAVANESE=Javanès
+GEORGIAN=Georgià
+KONGO=Kongo
+KIKUYU=Kikuiu
+KUANYAMA=Kuanyama
+KAZAKH=Kazakh
 KALAALLISUT=Grenlandès
+CENTRAL_KHMER=Khmer
 KANNADA=Kannada
+KOREAN=Coreà
 KANURI=Kanuri
 KASHMIRI=Caixmiri
-KAZAKH=Kazakh
-KIKUYU=Kikuiu
-KINYARWANDA=Ruandès
-KIRGHIZ=Kirguís
-KOMI=Komi
-KONGO=Kongo
-KOREAN=Coreà
-KUANYAMA=Kuanyama
 KURDISH=Kurd
-LAO=Laosià
+KOMI=Komi
+CORNISH=Còrnic
+KIRGHIZ=Kirguís
 LATIN=Llatí
-LATVIAN=Letó
+LUXEMBOURGISH=Luxemburguès
+GANDA=Ganda
 LIMBURGAN=Limburguès
 LINGALA=Lingala
+LAO=Laosià
 LITHUANIAN=Lituà
 LUBA_KATANGA=Luba katanga
-LUXEMBOURGISH=Luxemburguès
-MACEDONIAN=Macedoni
+LATVIAN=Letó
 MALAGASY=Malgaix
-MALAY=Malai
-MALAYALAM=Malaiàlam
-MALTESE=Maltès
-MANX=Manx
-MAORI=Maori
-MARATHI=Marathi
 MARSHALLESE=Marshallès
-MODERN_GREEK=Grec
+MAORI=Maori
+MACEDONIAN=Macedoni
+MALAYALAM=Malaiàlam
 MONGOLIAN=Mongol
+MARATHI=Marathi
+MALAY=Malai
+MALTESE=Maltès
+BURMESE=Birmà
 NAURU=Nauruà
-NAVAJO=Navaho
-NDONGA=Ndonga
-NEPALI=Nepalès
-NORTHERN_SAMI=Sami septentrional
+BOKMAL_NORWEGIAN=Noruec bokmål
 NORTH_NDEBELE=Ndebele septentrional
-NORWEGIAN=Noruec
+NEPALI=Nepalès
+NDONGA=Ndonga
+DUTCH=Neerlandès
 NYNORSK_NORWEGIAN=Noruec nynorsk
+NORWEGIAN=Noruec
+SOUTH_NDEBELE=Ndebele meridional
+NAVAJO=Navaho
+CHICHEWA=Nyanja
 OCCITAN=Occità
 OJIBWA=Ojibwa
-ORIYA=Oriya
 OROMO=Oromo
+ORIYA=Oriya
 OSSETIAN=Osset
-PALI=Pali
 PANJABI=Panjabi
-PERSIAN=Persa
+PALI=Pali
 POLISH=Polonès
-PORTUGUESE=Portuguès
 PUSHTO=Paixtu
+PORTUGUESE=Portuguès
 QUECHUA=Quítxua
-ROMANIAN=Romanès
 ROMANSH=Retoromànic
 RUNDI=Rundi
+ROMANIAN=Romanès
 RUSSIAN=Rus
-SAMOAN=Samoà
-SANGO=Sango
+KINYARWANDA=Ruandès
 SANSKRIT=Sànscrit
 SARDINIAN=Sard
-SERBIAN=Serbi
-SHONA=Shona
-SICHUAN_YI=Yi sichuan
 SINDHI=Sindhi
+NORTHERN_SAMI=Sami septentrional
+SANGO=Sango
 SINHALA=Singalès
 SLOVAK=Eslovac
 SLOVENIAN=Eslovè
+SAMOAN=Samoà
+SHONA=Shona
 SOMALI=Somali
-SOTHO=Sotho meridional
-SOUTH_NDEBELE=Ndebele meridional
-SPANISH=Espanyol
-SUNDANESE=Sundanès
-SWAHILI=Suahili
+ALBANIAN=Albanès
+SERBIAN=Serbi
 SWATI=Siswati
+SOTHO=Sotho meridional
+SUNDANESE=Sundanès
 SWEDISH=Suec
-TAGALOG=Tagàlog
-TAHITIAN=Tahitià
-TAJIK=Tadjik
+SWAHILI=Suahili
 TAMIL=Tàmil
-TATAR=Tàtar
 TELUGU=Telugu
+TAJIK=Tadjik
 THAI=Tailandès
-TIBETAN=Tibetà
 TIGRINYA=Tigrinya
-TONGA=Tongalès
-TSONGA=Tsonga
-TSWANA=Tswana
-TURKISH=Turc
 TURKMEN=Turcman
+TAGALOG=Tagàlog
+TSWANA=Tswana
+TONGA=Tongalès
+TURKISH=Turc
+TSONGA=Tsonga
+TATAR=Tàtar
 TWI=Twi
+TAHITIAN=Tahitià
 UIGHUR=Uigur
 UKRAINIAN=Ucraïnès
 URDU=Urdú
@@ -320,11 +435,10 @@ VENDA=Venda
 VIETNAMESE=Vietnamita
 VOLAPUK=Volapük
 WALLOON=Való
-WELSH=Gal·lès
-WESTERN_FRISIAN=Frisó occidental
 WOLOF=Wòlof
 XHOSA=Xosa
 YIDDISH=Jiddisch
 YORUBA=Ioruba
 ZHUANG=Zhuang
+CHINESE=Xinès
 ZULU=Zulu
