--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucConstants_es.properties
@@ -1,30 +1,40 @@
-# Custom messages
+# == Custom messages ==========================================================
 
 CHOOSE_AN_OPTION=Escoja una opción
 
-# Types for 'EntityType'
-
-ROOT_CONCEPT=Concepto raíz
-
-# Types for 'CategoryType'
-
-EDUCATION_PHASE=Fase educativa
-EDUCATION_STAGE=Etapa educativa
-ACADEMIC_YEAR=Año académico
-FIELD_OF_STUDY=Campo de estudio
-PROGRAMME_OF_STUDY=Programa de estudio
-TOPIC_OF_STUDY=Tema de estudio
-
-# Types for 'context'
-
-HIGHER_EDUCATION=Educación superior
-OTHER=Otro
-SCHOOL=Centro
-TRAINING=Formación
-
-# Types for 'contributorRole'
+# == Normal user of a learning object (LOMv1.0) ===============================
 
 AUTHOR=Autor
+LEARNER=Aprendiz
+MANAGER=Gerente
+TEACHER=Profesor
+
+# == Content knowledge type (DUCv3.0) =========================================
+
+UNSPECIFIED=Sin especificar
+ATTITUDINAL=Actitudinal
+CONCEPTUAL=Conceptual
+PROCEDURAL=Procedural
+
+# == Whether copyright or other restrictions apply (LOMv1.0) ==================
+
+HAS_RESTRICTIONS=Tiene restricciones
+WITHOUT_RESTRICTIONS=Sin restricciones
+
+# == Content licenses (DUCv3.0) ===============================================
+
+CREATIVE_COMMONS_BY=Creative Commons: Atribución (BY)
+CREATIVE_COMMONS_BYSA=Creative Commons: Atribución-CompartirIgual (BY-SA)
+CREATIVE_COMMONS_BYND=Creative Commons: Atribución-NoDerivadas (BY-ND)
+CREATIVE_COMMONS_BYNC=Creative Commons: Atribución-NoComercial (BY-NC)
+CREATIVE_COMMONS_BYNCSA=Creative Commons: Atribución-NoComercial-CompartirIgual (BY-NC-SA)
+CREATIVE_COMMONS_BYNCND=Creative Commons: Atribución-NoComercial-NoDerivadas (BY-NC-ND)
+EDU3_EDUCATIONAL=Edu3 educational
+OTHER_COPYRIGHT=Otras licencias de copyright
+PUBLIC_DOMAIN=Dominio público
+
+# == Lifecycle contributor roles (LOMv1.0) ====================================
+
 CONTENT_PROVIDER=Proveedor de contenidos
 CREATOR=Creador
 EDITOR=Editor
@@ -41,77 +51,59 @@ TERMINATOR=Terminador
 UNKNOWN=Desconocido
 VALIDATOR=Validador
 
-# Types for 'Cost'
-
-REQUIRES_PAYMENT=Requiere pagamento
-WITHOUT_CHARGE=Sin recargos
-
-# Types for 'Copyright'
-
-CC_BY=Creative Commons: Atribución (CC BY)
-CC_BY_SA=Creative Commons: Atribución-CompartirIgual (CC BY-SA)
-CC_BY_ND=Creative Commons: Atribución-NoDerivadas (CC BY-ND)
-CC_BY_NC=Creative Commons: Atribución-NoComercial (CC BY-NC)
-CC_BY_NC_SA=Creative Commons: Atribución-NoComercial-CompartirIgual (CC BY-NC-SA)
-CC_BY_NC_ND=Creative Commons: Atribución-NoComercial-NoDerivadas (CC BY-NC-ND)
-EDU3=Edu3
-COPYRIGHT=Otras licencias de copyright
-PUBLIC_DOMAIN=Dominio público
-
-# Types for 'Knowledge'
-
-INDETERMINATE=Indeterminado
-ATTITUDINAL=Actitudinal
-CONCEPTUAL=Conceptual
-PROCEDURAL=Procedural
-
-# Types for 'kind'
-
-IS_PART_OF=Es parte de
-HAS_PART=Tiene parte
-IS_VERSION_OF=Es una versión de
-HAS_VERSION=Tiene una versión
-IS_FORMAT_OF=Es formato de
-HAS_FORMAT=Tiene formato
-REFERENCES=Referencias
-IS_REFERENCED_BY=Es referenciado por
-IS_BASED_ON=Está basado en
-IS_BASIS_FOR=Es base para
-REQUIRES=Requiere
-IS_REQUIRED_BY=Es requerido por
-
-# Types for 'TermType'
-
-FACET_INDICATOR=Indicador de faceta
-PREFERRED_TERM=Término preferido
-NON_PREFERRED_TERM=Término no preferido
-
-# Types for 'learningResourceType'
-
-EXERCISE=Ejercicio
-SIMULATION=Simulación
-QUESTIONNAIRE=Cuestionario
-DIAGRAM=Diagrama
-FIGURE=Figura
-GRAPH=Grafico
-INDEX=Índice
-LECTURE=Conferencia
-SLIDE=Diapositiva
-TABLE=Tabla
-NARRATIVE_TEXT=Texto narrativo
-EXAM=Examen
-EXPERIMENT=Experimento
-PROBLEM_STATEMENT=Planteamiento de problema
-SELF_ASSESMENT=Autoevaluación
-
-# Types for 'status'
+# == The state or condition of a learning object (LOMv1.0) ====================
 
 DRAFT=Borrador
 FINAL=Final
 REVISED=Revisado
 UNAVAILABLE=No disponible
 
-# Types for 'structure'
+# == Physical medium of the resource (DUCv3.0) ================================
+
+# LRE Learning Resource Types (learning asset)
+
+AUDIO=Audio
+DATA=Datos
+IMAGE=Imagen
+TEXT=Texto
+VIDEO=Vídeo
+
+# LRE Learning Resource Types (learning resource)
+
+APPLICATION=Aplicación
+EDUCATIONAL_GAME=Juego educativo
+TEXTBOOK=Libro de texto
+PRESENTATION=Presentación
+SOCIAL_MEDIA=Medio de comunicación social
+
+# Custom types
+
+BROCHURE=Folleto
+DOSSIER=Dosier
+EQUIPMENT=Equipo
+INTERACTIVE_TEXTBOOK=Libro de texto interactivo
+MAGAZINE=Revista
+MAP=Mapa
+MUSICAL_AUDIO=Audio musical
+PHOTOGRAPH=Fotografía
+PRINTABLE=Imprimible
+TEXT_DOCUMENT=Documento de texto
+VISUAL_MEDIA=Medio visual
+
+# == Whether use of the resource requires payment (LOMv1.0) ===================
+
+REQUIRES_PAYMENT=Requiere pagamento
+WITHOUT_CHARGE=Sin recargos
+
+# == Identifier catalogs types (RFC-8141) =====================================
+
+ISBN=International Standard Book Number (ISBN)
+ISSN=International Standard Serial Number (ISSN)
+LEGAL_DEPOSIT=Depósito legal (NBN)
+MERLI=Referencia interna
+OTHER_CATALOG=Otro catálogo
+
+# == Underlying organizational structure of a learning object (LOMv1.0) =======
 
 ATOMIC=Atómico
 COLLECTION=Colección
@@ -119,198 +111,322 @@ HIERARCHICAL=Jerárquico
 LINEAR=Lineal
 NETWORKED=En red
 
-# Types for 'termRelation'
+# == Educational contexts (LREv3.0) ===========================================
 
-USE=Utilizar
-USE_FOR=Usar para
+COMPULSORY_EDUCATION=Educación obligatoria
+CONTINUING_EDUCATION=Formación continua
+DISTANCE_EDUCATION=Educación a distancia
+EDUCATIONAL_ADMINISTRATION=Administración educativa
+HIGHER_EDUCATION=Educación superior
+LIBRARY=Biblioteca
+POLICY_MAKING=Formulación de políticas
+PRESCHOOL=Preescolar
+PROFESSIONAL_DEVELOPMENT=Desarrollo profesional
+SPECIAL_EDUCATION=Educación especial
+VOCATIONAL_EDUCATION=Educación vocacional
+OTHER=Otro
+
+# == Classification purpose (LOMv1.0) =========================================
+
+ACCESSIBILITY_RESTRICTIONS=Restricciones de accesibilidad
+COMPETENCY=Competencia
+DISCIPLINE=Disciplina
+EDUCATIONAL_LEVEL=Nivel educativo
+EDUCATIONAL_OBJECTIVE=Objetivo educativo
+IDEA=Idea
+PREREQUISITE=Requisito previo
+SECURITY_LEVEL=Nivel de seguridad
+SKILL_LEVEL=Nivel de habilidad
+EDUCATIONAL_CONTEXT=Contexto educativo
+SUBJECT_DESCRIPTOR=Descriptor de materia
+
+# == Specific kind of resource (LREv3.0) ======================================
+
+ASSESSMENT=Evaluación
+DRILL_AND_PRACTICE=Ejercicio y práctica
+EXPLORATION=Exploración
+GLOSSARY=Glosario
+GUIDE=Guía
+OPEN_ACTIVITY=Actividad abierta
+TOOL=Herramienta
+WEB_PAGE=Página web
+
+# == Relationships types ======================================================
+
+# Generic relationships (DUCv3.0)
+
+ENTITY=Entidad
+TERM=Término
+RESOURCE=Recurso
+
+# Term relationships (DUCv3.0)
+
 TOP_TERM=Término superior
 BROADER_TERM=Término más amplio
 NARROWER_TERM=Un término más específico
 RELATED_TERM=Término relacionado
+USE=Utilizar
+USE_FOR=Usar para
 
-# Types for 'UserRole'
+# Resource relationships (LOMv1.0)
 
-LEARNER=Aprendiz
-MANAGER=Gerente
-TEACHER=Profesor
+REQUIRES=Requiere
+REFERENCES=Referencias
+HAS_PART=Tiene parte
+HAS_VERSION=Tiene una versión
+HAS_FORMAT=Tiene formato
+IS_REQUIRED_BY=Es requerido por
+IS_REFERENCED_BY=Es referenciado por
+IS_PART_OF=Es parte de
+IS_VERSION_OF=Es una versión de
+IS_FORMAT_OF=Es formato de
+IS_BASED_ON=Está basado en
+IS_BASIS_FOR=Es base para
 
-# Identifier catalogs
+# == Entity types (DUCv3.0) ===================================================
 
-ISBN=ISBN
-ISSN=ISSN
-LEGAL_DEPOSIT=Depósito legal
-OTHER_CATALOG=Otro catálogo
+# Hierarchy types (DUCv3.0)
 
-# Language names
+ROOT_CONCEPT=Concepto raíz
+CONTENT_CATEGORY=Categoría de contenidos
+VOCABULARY_TERM=Termino del vocabulario
+FREE_TERM=Termino libre
 
-#BIHARI_LANGUAGES=bh
-ABKHAZIAN=Abjasio
+# Resource types (DUCv3.0)
+
+LEARNING_OBJECT=Objeto de aprendizaje
+
+# Category types (DUCv3.0)
+
+EDUCATION_PHASE=Fase educativa
+EDUCATION_STAGE=Etapa educativa
+ACADEMIC_YEAR=Año académico
+FIELD_OF_STUDY=Campo de estudio
+PROGRAMME_OF_STUDY=Programa de estudio
+TOPIC_OF_STUDY=Tema de estudio
+
+# Thesaurus term types (DUCv3.0)
+
+FACET_INDICATOR=Indicador de faceta
+PREFERRED_TERM=Término preferido
+NON_PREFERRED_TERM=Término no preferido
+
+# == Technical data type of the learing object (LREv3.0) ======================
+
+APPLICATION_BASE64=Application/base64
+APPLICATION_BINARY=Binary Software
+APPLICATION_JAVA=Java Application
+APPLICATION_MACBINHEX40=Application/macbinhex40
+APPLICATION_MSEXCEL=Microsoft Excel
+APPLICATION_MSWORD=Microsoft Word
+APPLICATION_OGG=Ogg
+APPLICATION_PDF=Adobe Portable Document Format (PDF)
+APPLICATION_POSTSCRIPT=PostScript
+APPLICATION_PPT=Application/ppt
+APPLICATION_RTF=Rich Text Format (RTF)
+APPLICATION_UUE=Unix-to-Unix encoding
+APPLICATION_COMPRESSED=Application/x-compressed
+APPLICATION_GZIP_COMPRESSED=Application/x-gzip-compressed
+APPLICATION_REALMEDIA=Application/x-pn-realmedia
+APPLICATION_SHOCKWAVE_FLASH=Adobe Flash
+APPLICATION_STUFFIT=Stuffit Archive
+APPLICATION_ZIP_COMPRESSED=Application/x-zip-compressed
+APPLICATION_ZIP=Zip Archive
+AUDIO_BASIC=Au file format
+AUDIO_MIDI=Musical Instrument Digital Interface (MIDI)
+AUDIO_MP3=MPEG Audio Layer (MP3)
+AUDIO_MPEG=MPEG Audio
+AUDIO_WAV=Waveform Audio Format (WAV)
+AUDIO_REALAUDIO=Real Audio Sound
+AUDIO_REALAUDIO_PLUGIN=Real Audio Sound Plugin
+IMAGE_BMP=Bitmap Image File (BMP)
+IMAGE_GIF=Graphics Interchange Format (GIF)
+IMAGE_JPEG=JPEG Image (JPG)
+IMAGE_PNG=Portable Network Graphics (PNG)
+IMAGE_TIFF=Tagged Image File Format (TIFF)
+IMAGE_WMF=Windows Metafile (WMF)
+MODEL_VRML=Virtual Reality Modeling Language (VRML)
+TEXT_HTML=HyperText Markup Language (HTML)
+TEXT_PLAIN=Text File
+TEXT_RICHTEXT=Rich Text Format (RTF)
+TEXT_XML=Extensible Markup Language (XML)
+VIDEO_AVI=Audio Video Interleave (AVI)
+VIDEO_MPEG=MPEG Video
+VIDEO_QUICKTIME=Quicktime Video
+VIDEO_REALVIDEO=RealMedia Video
+VIDEO_REALVIDEO_PLUGIN=RealMedia Video Plugin
+
+# == ISO 639-1 languages (LREv3.0) ============================================
+
 AFAR=Afar
+ABKHAZIAN=Abjasio
+AVESTAN=Avéstico
 AFRIKAANS=Afrikáans
 AKAN=Akan
-ALBANIAN=Albanés
 AMHARIC=Amárico
-ARABIC=Árabe
 ARAGONESE=Aragonés
-ARMENIAN=Armenio
+ARABIC=Árabe
 ASSAMESE=Asamés
 AVARIC=Avar
-AVESTAN=Avéstico
 AYMARA=Aimara
 AZERBAIJANI=Azerbaiyano
-BAMBARA=Bambara
 BASHKIR=Baskir
-BASQUE=Euskera
 BELARUSIAN=Bielorruso
-BENGALI=Bengalí
-BISLAMA=Bislama
-BOKMAL_NORWEGIAN=Bokmal noruego
-BOSNIAN=Bosnio
-BRETON=Bretón
 BULGARIAN=Búlgaro
-BURMESE=Birmano
+BIHARI_LANGUAGES=Bihari languages
+BISLAMA=Bislama
+BAMBARA=Bambara
+BENGALI=Bengalí
+TIBETAN=Tibetano
+BRETON=Bretón
+BOSNIAN=Bosnio
 CATALAN=Catalán
-CENTRAL_KHMER=Jemer
-CHAMORRO=Chamorro
 CHECHEN=Checheno
-CHICHEWA=Nyanja
-CHINESE=Chino
-CHURCH_SLAVIC=Eslavo eclesiástico
-CHUVASH=Chuvash
-CORNISH=Córnico
+CHAMORRO=Chamorro
 CORSICAN=Corso
 CREE=Cree
-CROATIAN=Croata
 CZECH=Checo
+CHURCH_SLAVIC=Eslavo eclesiástico
+CHUVASH=Chuvash
+WELSH=Galés
 DANISH=Danés
+GERMAN=Alemán
 DIVEHI=Divehi
-DUTCH=Neerlandés
 DZONGKHA=Dzongkha
+EWE=Ewé
+MODERN_GREEK=Griego
 ENGLISH=Inglés
 ESPERANTO=Esperanto
+SPANISH=Español
 ESTONIAN=Estonio
-EWE=Ewé
-FAROESE=Feroés
-FIJIAN=Fiyiano
-FINNISH=Finés
-FRENCH=Francés
+BASQUE=Euskera
+PERSIAN=Persa
 FULAH=Fula
+FINNISH=Finés
+FIJIAN=Fiyiano
+FAROESE=Feroés
+FRENCH=Francés
+WESTERN_FRISIAN=Frisón occidental
+IRISH=Irlandés
 GAELIC=Gaélico escocés
 GALICIAN=Gallego
-GANDA=Ganda
-GEORGIAN=Georgiano
-GERMAN=Alemán
 GUARANI=Guaraní
 GUJARATI=Gujarati
-HAITIAN=Haitiano
+MANX=Manés
 HAUSA=Hausa
 HEBREW=Hebreo
-HERERO=Herero
 HINDI=Hindi
 HIRI_MOTU=Hiri motu
+CROATIAN=Croata
+HAITIAN=Haitiano
 HUNGARIAN=Húngaro
-ICELANDIC=Islandés
-IDO=Ido
-IGBO=Igbo
-INDONESIAN=Indonesio
+ARMENIAN=Armenio
+HERERO=Herero
 INTERLINGUA=Interlingua
+INDONESIAN=Indonesio
 INTERLINGUE=Interlingue
-INUKTITUT=Inuktitut
+IGBO=Igbo
+SICHUAN_YI=Yi de Sichuán
 INUPIAQ=Inupiaq
-IRISH=Irlandés
+IDO=Ido
+ICELANDIC=Islandés
 ITALIAN=Italiano
+INUKTITUT=Inuktitut
 JAPANESE=Japonés
 JAVANESE=Javanés
+GEORGIAN=Georgiano
+KONGO=Kongo
+KIKUYU=Kikuyu
+KUANYAMA=Kuanyama
+KAZAKH=Kazajo
 KALAALLISUT=Groenlandés
+CENTRAL_KHMER=Jemer
 KANNADA=Canarés
+KOREAN=Coreano
 KANURI=Kanuri
 KASHMIRI=Cachemiro
-KAZAKH=Kazajo
-KIKUYU=Kikuyu
-KINYARWANDA=Kinyarwanda
-KIRGHIZ=Kirguís
-KOMI=Komi
-KONGO=Kongo
-KOREAN=Coreano
-KUANYAMA=Kuanyama
 KURDISH=Kurdo
-LAO=Laosiano
+KOMI=Komi
+CORNISH=Córnico
+KIRGHIZ=Kirguís
 LATIN=Latín
-LATVIAN=Letón
+LUXEMBOURGISH=Luxemburgués
+GANDA=Ganda
 LIMBURGAN=Limburgués
 LINGALA=Lingala
+LAO=Laosiano
 LITHUANIAN=Lituano
 LUBA_KATANGA=Luba-katanga
-LUXEMBOURGISH=Luxemburgués
-MACEDONIAN=Macedonio
+LATVIAN=Letón
 MALAGASY=Malgache
-MALAY=Malayo
-MALAYALAM=Malayalam
-MALTESE=Maltés
-MANX=Manés
-MAORI=Maorí
-MARATHI=Maratí
 MARSHALLESE=Marshalés
-MODERN_GREEK=Griego
+MAORI=Maorí
+MACEDONIAN=Macedonio
+MALAYALAM=Malayalam
 MONGOLIAN=Mongol
+MARATHI=Maratí
+MALAY=Malayo
+MALTESE=Maltés
+BURMESE=Birmano
 NAURU=Nauruano
-NAVAJO=Navajo
-NDONGA=Ndonga
-NEPALI=Nepalí
-NORTHERN_SAMI=Sami septentrional
+BOKMAL_NORWEGIAN=Bokmal noruego
 NORTH_NDEBELE=Ndebele septentrional
-NORWEGIAN=Noruego
+NEPALI=Nepalí
+NDONGA=Ndonga
+DUTCH=Neerlandés
 NYNORSK_NORWEGIAN=Nynorsk noruego
+NORWEGIAN=Noruego
+SOUTH_NDEBELE=Ndebele meridional
+NAVAJO=Navajo
+CHICHEWA=Nyanja
 OCCITAN=Occitano
 OJIBWA=Ojibwa
-ORIYA=Oriya
 OROMO=Oromo
+ORIYA=Oriya
 OSSETIAN=Osético
-PALI=Pali
 PANJABI=Panyabí
-PERSIAN=Persa
+PALI=Pali
 POLISH=Polaco
-PORTUGUESE=Portugués
 PUSHTO=Pastún
+PORTUGUESE=Portugués
 QUECHUA=Quechua
-ROMANIAN=Rumano
 ROMANSH=Retorrománico
 RUNDI=Kiroundi
+ROMANIAN=Rumano
 RUSSIAN=Ruso
-SAMOAN=Samoano
-SANGO=Sango
+KINYARWANDA=Kinyarwanda
 SANSKRIT=Sánscrito
 SARDINIAN=Sardo
-SERBIAN=Serbio
-SHONA=Shona
-SICHUAN_YI=Yi de Sichuán
 SINDHI=Sindhi
+NORTHERN_SAMI=Sami septentrional
+SANGO=Sango
 SINHALA=Cingalés
 SLOVAK=Eslovaco
 SLOVENIAN=Esloveno
+SAMOAN=Samoano
+SHONA=Shona
 SOMALI=Somalí
-SOTHO=Sesotho meridional
-SOUTH_NDEBELE=Ndebele meridional
-SPANISH=Español
-SUNDANESE=Sundanés
-SWAHILI=Swahili
+ALBANIAN=Albanés
+SERBIAN=Serbio
 SWATI=Siswati
+SOTHO=Sesotho meridional
+SUNDANESE=Sundanés
 SWEDISH=Sueco
-TAGALOG=Tagalo
-TAHITIAN=Tahitiano
-TAJIK=Tayiko
+SWAHILI=Swahili
 TAMIL=Tamil
-TATAR=Tártaro
 TELUGU=Telugu
+TAJIK=Tayiko
 THAI=Tailandés
-TIBETAN=Tibetano
 TIGRINYA=Tigriña
-TONGA=Tongano
-TSONGA=Tsonga
-TSWANA=Setchwana
-TURKISH=Turco
 TURKMEN=Turcomano
+TAGALOG=Tagalo
+TSWANA=Setchwana
+TONGA=Tongano
+TURKISH=Turco
+TSONGA=Tsonga
+TATAR=Tártaro
 TWI=Twi
+TAHITIAN=Tahitiano
 UIGHUR=Uigur
 UKRAINIAN=Ucraniano
 URDU=Urdu
@@ -319,11 +435,10 @@ VENDA=Venda
 VIETNAMESE=Vietnamita
 VOLAPUK=Volapük
 WALLOON=Valón
-WELSH=Galés
-WESTERN_FRISIAN=Frisón occidental
 WOLOF=Wólof
 XHOSA=Xhosa
 YIDDISH=Yídish
 YORUBA=Yoruba
 ZHUANG=Zhuang
+CHINESE=Chino
 ZULU=Zulú
