--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages.properties
@@ -1,65 +1,55 @@
-# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditor
 
 16CE632F0072C194218EA31EBBACE5FE=Specific kinds of resources
 3FB6CBBB95C6DC37065940884B8A1971=User''s natural languages
 AC1397CFBB59A26413AA70B2AFF117DB=Normal users of the resource
 C4D7568F7F2D74F1D106803B09104600=How the learning object is to be used
-C4D7568F7F2D74F1D106803B09104600=How the learning object is to be used
 EB1E24895041E5418996D6FECE267C7D=Typical learning environment
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditor
 
-693C1B5B512A7D10F46475A55F4E7512=Description of the content
 693C1B5B512A7D10F46475A55F4E7512=Description of the content
 8B63F64B0D81F4CCD1BEEF9A2D5B54F8=Organizational structure
 913CAD26B6216780BFAE9455AA8E5D04=Catalog entries
 BA96776F8566238A6AB50643406558F4=Name of the learning object
-BA96776F8566238A6AB50643406558F4=Name of the learning object
 F09C10581A6AC7D50AC2F0D7D80DAC6A=Keywords that describe this resource
-F8E09F921930EEB6EB773E4062EFEC3E=Categories where this object belongs
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.IdentifierEditorBinderImplGenMessages
-
-914EE3C6298572057086966181B97E65=Catalog identifier
-
-# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditor
 
 24556EA52ECCEDBA06644534E963A1E5=Edition of the object
-45C33291003122D6074FB7A8FAE6F4FD=Edition or version number
 B9521B8FC99390930660F2D1CBC945C9=State or condition of the object
 E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contributors to the metadata
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.PhysicalDetailsEditor
+
+15D9D16A2C7B8B14101AEA8F6F86D9FF=Physical types
+BEE4E3AA0C747605A60835DD4098C95C=Physical characteristics
+
+# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditor
 
 2BADAEF0093EBA364F5BDB178C1DD132=History and current state
 3E02F7358C4E54818B307AEBC43764A1=Conditions of use
 7E0F10ECBF9079A535A9746D2415DD1C=Technical characteristics
 997C785CCE775D7C1014FFBD6E446D50=General information
 AB078471348D04548907494926FDD0AE=Relations with other resources
-AB078471348D04548907494926FDD0AE=Relations with other resources
 E2CF66ABA654B88B299F54BF9A77844D=Pedagogical and educational characteristics
+F8E09F921930EEB6EB773E4062EFEC3E=Categories where this object belongs
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditor
 
 089941C56007B1AFAB4CCE39A0E2B35D=Comments on the conditions of use of the resource
-089941C56007B1AFAB4CCE39A0E2B35D=Comments on the conditions of use of the resource
+660CB90F4B5280D702B3FAF9C3EDC7ED=License of the content
 A67670C5F1DB45ABB19AC5DBF158639E=Whether copyright or other restrictions apply
 DF0E9B863737116A866D6CD83C49EFC4=Whether use of the resource requires payment
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditor
 
-3AFDDBF811A6F43C9501DC1FB78F8749=Physical characteristics of the learning object
 6FB04C380A1349F89E34CF3DF0CE9954=Duration of the resource
 A52DB90E89CC076D2ABE92F6F1B1867E=Location of the learning object
 A8BB76932BEFC14A58036FDA76DF286A=Formats and media types
-BEE4E3AA0C747605A60835DD4098C95C=Physical characteristics
 E4DDFA8663F95D868D9736561E92EC31=Web address of the learning object
 
-# Messages from cat.xtec.merli.duc.client.editors.TargetEditorBinderImplGenMessages
-
-53A4EB77335DA05DEDFC640FBF87065A=Enter a name
-
-# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditor
 
 04B1A8782B511B70FE4175D59C15AF5F=Additional observations and remarks
 263DF4303FC8E2F27499CAEFAD0C6F25=Observations
@@ -73,11 +63,45 @@ E199DCD77AF61CD1BE075E40C2F0CCC0=Learning resource type
 F4D4F164C7DBE79D6ABC8CEED7B844C6=Categories this object is a subclass-of
 FDA8AAB7C0A765E297A01E6B43D248D9=Meaning of the category and its usage
 
-# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.taxa.TargetEditor
 
-3DA6D0A3DA6B43B4E8C262C172F92239=Meaning and usage
+53A4EB77335DA05DEDFC640FBF87065A=Enter a name
+
+# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditor
+
 4F69D635DD47CE8BAC67C94267CB4122=Term type
 8165515D23A80788DD28A93CF4845E03=Meaning of the term and its usage
 8E29CE067C5E4816794C661F522ACA99=Relationships originating from this term
 CA8D52FB5600ECEE01CE4FAC84AB748A=Terms this object is a subclass-of
 E2BEE1660FD24C36252C8D0C63065FEF=Label for the term
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContactEditor
+
+419EB7C0E6A2B89CC8C1CF995EB7CFFF=Company or individual name
+FFE48D7A819D6C1CDA62610113A94485=User identifier
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContributionEditor
+
+7F6E02D7E21EE08666EC76D6F8C65BAA=Date of the contribution
+91FF880ECE402545859E287A3620B7AC=List of contributors
+E9EDDD29533F9538D5A8529FC43AC851=Type of contribution
+
+# Messages from cat.xtec.merli.duc.client.editors.type.IdentifierEditor
+
+914EE3C6298572057086966181B97E65=Catalog identifier
+
+# Messages from cat.xtec.merli.duc.client.portlets.FormPortlet
+
+62A26F3B213177A52F9835DE5AB144D6=Has unsaved changes
+96A238708DFA82297FD54F639749CB14=Export entity
+9877BBB1E06F0D527D6DB7730B280808=Other actions
+C9CC8CCE247E49BAE79F15173CE97354=Save
+D2E31DD9C6B8C255917E6367FC955DAB=Delete entity
+DAA6B483E9F6CA081EC7E0B4A352F9E9=Save changes
+E593A17D32DFBE66F7DB69C340286355=Undo all changes
+
+# Messages from cat.xtec.merli.duc.client.portlets.TreePortlet
+
+13348442CC6A27032D2B4AA28B75A5D3=Search
+686E697538050E4664636337CC3B834F=Create
+AAB9285B511B639FA4CF3375ED57E948=Refresh view
