--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_ca.properties
@@ -1,4 +1,4 @@
-# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditor
 
 16CE632F0072C194218EA31EBBACE5FE=Tipus específics de recursos
 3FB6CBBB95C6DC37065940884B8A1971=Llenguatges naturals de l''usuari
@@ -6,29 +6,26 @@ AC1397CFBB59A26413AA70B2AFF117DB=Usuaris habituals del recurs
 C4D7568F7F2D74F1D106803B09104600=Com s''utilitzarà l''objecte d''aprenentatge
 EB1E24895041E5418996D6FECE267C7D=Entorn d''aprenentatge típic
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditor
 
-693C1B5B512A7D10F46475A55F4E7512=Descripció del contingut
 693C1B5B512A7D10F46475A55F4E7512=Descripció del contingut
 8B63F64B0D81F4CCD1BEEF9A2D5B54F8=Estructura organitzativa
 913CAD26B6216780BFAE9455AA8E5D04=Entrades de catàleg
 BA96776F8566238A6AB50643406558F4=Nom de l''objecte d''aprenentatge
-BA96776F8566238A6AB50643406558F4=Nom de l''objecte d''aprenentatge
 F09C10581A6AC7D50AC2F0D7D80DAC6A=Paraules clau que descriuen el recurs
-F8E09F921930EEB6EB773E4062EFEC3E=Categories a les que pertany l''objecte
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.IdentifierEditorBinderImplGenMessages
-
-914EE3C6298572057086966181B97E65=Identificador de catàleg
-
-# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditor
 
 24556EA52ECCEDBA06644534E963A1E5=Edició de l''objecte
-45C33291003122D6074FB7A8FAE6F4FD=Edició o nombre de versió
 B9521B8FC99390930660F2D1CBC945C9=Estat o condició de l''objecte
 E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidors a les metadades
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.PhysicalDetailsEditor
+
+15D9D16A2C7B8B14101AEA8F6F86D9FF=Tipus físics
+BEE4E3AA0C747605A60835DD4098C95C=Característiques físiques
+
+# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditor
 
 2BADAEF0093EBA364F5BDB178C1DD132=Historial i estat actual
 3E02F7358C4E54818B307AEBC43764A1=Condicions d''ús
@@ -36,27 +33,23 @@ E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidors a les metadades
 997C785CCE775D7C1014FFBD6E446D50=Informació general
 AB078471348D04548907494926FDD0AE=Relacions amb altres recursos
 E2CF66ABA654B88B299F54BF9A77844D=Característiques pedagòciques i educatives
+F8E09F921930EEB6EB773E4062EFEC3E=Categories a les quals pertany l''objecte
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditor
 
 089941C56007B1AFAB4CCE39A0E2B35D=Comentaris sobre les condicions d''ús del recurs
+660CB90F4B5280D702B3FAF9C3EDC7ED=Llicència del contingut
 A67670C5F1DB45ABB19AC5DBF158639E=Si s''apliquen restriccions de copyright o d''altres
 DF0E9B863737116A866D6CD83C49EFC4=Si l''ús del recurs requereix pagament
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditor
 
-3AFDDBF811A6F43C9501DC1FB78F8749=Característiques fisiques de l''objecte d''aprenentatge
 6FB04C380A1349F89E34CF3DF0CE9954=Durada del recurs
 A52DB90E89CC076D2ABE92F6F1B1867E=Ubicació de l''objecte d''aprenentatge
 A8BB76932BEFC14A58036FDA76DF286A=Formats i tipus multimèdia
-BEE4E3AA0C747605A60835DD4098C95C=Característiques físiques
 E4DDFA8663F95D868D9736561E92EC31=Adreça web de l''objecte d''aprenentatge
 
-# Messages from cat.xtec.merli.duc.client.editors.TargetEditorBinderImplGenMessages
-
-53A4EB77335DA05DEDFC640FBF87065A=Introduïu un nom
-
-# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditor
 
 04B1A8782B511B70FE4175D59C15AF5F=Observacions addicionals i comentaris
 263DF4303FC8E2F27499CAEFAD0C6F25=Observacions
@@ -67,14 +60,48 @@ E4DDFA8663F95D868D9736561E92EC31=Adreça web de l''objecte d''aprenentatge
 AF3C31C2D4FDBC1278808A16BF4BDF7C=Etiqueta per a la categoria
 D95867DEADFE690E40F42068D6B59DF8=Referències
 E199DCD77AF61CD1BE075E40C2F0CCC0=Tipus de recurs d''aprenentatge
-F4D4F164C7DBE79D6ABC8CEED7B844C6=Categories aquest objecte és una subclasse de
+F4D4F164C7DBE79D6ABC8CEED7B844C6=Categories a les quals pertany l''objecte
 FDA8AAB7C0A765E297A01E6B43D248D9=Significat de la categoria i el seu ús
 
-# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.TargetEditor
 
-3DA6D0A3DA6B43B4E8C262C172F92239=Significat i ús
+53A4EB77335DA05DEDFC640FBF87065A=Introduïu un nom
+
+# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditor
+
 4F69D635DD47CE8BAC67C94267CB4122=Tipus de terme
 8165515D23A80788DD28A93CF4845E03=Significat del terme i el seu ús
 8E29CE067C5E4816794C661F522ACA99=Relacions originades per aquest terme
-CA8D52FB5600ECEE01CE4FAC84AB748A=Termes que aquest objecte és una subclasse de
+CA8D52FB5600ECEE01CE4FAC84AB748A=Termes pare d''aquest objecte
 E2BEE1660FD24C36252C8D0C63065FEF=Etiqueta del terme
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContactEditor
+
+419EB7C0E6A2B89CC8C1CF995EB7CFFF=Nom d''empresa o persona
+FFE48D7A819D6C1CDA62610113A94485=Identificador d''usuari
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContributionEditor
+
+7F6E02D7E21EE08666EC76D6F8C65BAA=Data de la contribució
+91FF880ECE402545859E287A3620B7AC=Listat de contribuïdors
+E9EDDD29533F9538D5A8529FC43AC851=Tipus de contribució
+
+# Messages from cat.xtec.merli.duc.client.editors.lom.IdentifierEditor
+
+914EE3C6298572057086966181B97E65=Identificador de catàleg
+
+# Messages from cat.xtec.merli.duc.client.portlets.FormPortlet
+
+62A26F3B213177A52F9835DE5AB144D6=Conté modificacions sense desar
+96A238708DFA82297FD54F639749CB14=Exporta l''entitat
+9877BBB1E06F0D527D6DB7730B280808=Altres accions
+C9CC8CCE247E49BAE79F15173CE97354=Desa
+D2E31DD9C6B8C255917E6367FC955DAB=Suprimeix l''entitat
+DAA6B483E9F6CA081EC7E0B4A352F9E9=Desa les modificacions
+E593A17D32DFBE66F7DB69C340286355=Desfès les modificacions
+
+# Messages from cat.xtec.merli.duc.client.portlets.TreePortlet
+
+13348442CC6A27032D2B4AA28B75A5D3=Cerca
+686E697538050E4664636337CC3B834F=Crea
+AAB9285B511B639FA4CF3375ED57E948=Actualitza la vista
