--- a/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_es.properties
+++ b/manager/src/main/java/cat/xtec/merli/i18n/locales/cat/xtec/merli/duc/client/messages/DucMessages_es.properties
@@ -1,4 +1,4 @@
-# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.EducationalDetailsEditor
 
 16CE632F0072C194218EA31EBBACE5FE=Tipos específicos de recursos
 3FB6CBBB95C6DC37065940884B8A1971=Idiomas naturales del usuario
@@ -6,27 +6,25 @@ AC1397CFBB59A26413AA70B2AFF117DB=Usuarios habituales del recurso
 C4D7568F7F2D74F1D106803B09104600=Com se usará el objeto de aprendizaje
 EB1E24895041E5418996D6FECE267C7D=Entorno de aprendizaje típico
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.GeneralDetailsEditor
 
 693C1B5B512A7D10F46475A55F4E7512=Descripción del contenido
 8B63F64B0D81F4CCD1BEEF9A2D5B54F8=Estructura organizativa
 913CAD26B6216780BFAE9455AA8E5D04=Entradas de catálogo
 BA96776F8566238A6AB50643406558F4=Nombre del objeto de aprendizaje
 F09C10581A6AC7D50AC2F0D7D80DAC6A=Palabras clave que describen el recurso
-F8E09F921930EEB6EB773E4062EFEC3E=Categorias a las que pertenece el objeto
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.IdentifierEditorBinderImplGenMessages
-
-914EE3C6298572057086966181B97E65=Identificador de catálogo
-
-# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.LifeCycleDetailsEditor
 
 24556EA52ECCEDBA06644534E963A1E5=Edición del objeto
-45C33291003122D6074FB7A8FAE6F4FD=Edición o número de versión
 B9521B8FC99390930660F2D1CBC945C9=Estado o condición del objeto
 E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidores a los metadatos
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.PhysicalDetailsEditor
+
+15D9D16A2C7B8B14101AEA8F6F86D9FF=Tipos físicos
+BEE4E3AA0C747605A60835DD4098C95C=Características físicas
+# Messages from cat.xtec.merli.duc.client.editors.lom.ResourceEditor
 
 2BADAEF0093EBA364F5BDB178C1DD132=Histórico y estado actual
 3E02F7358C4E54818B307AEBC43764A1=Condiciones de uso
@@ -35,26 +33,21 @@ E6A0C5A15C3487B8C4A9D4AF78A58BF0=Contribuidores a los metadatos
 AB078471348D04548907494926FDD0AE=Relaciones con otros recursos
 E2CF66ABA654B88B299F54BF9A77844D=Características pedagógicas y educativas
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.RightsDetailsEditor
 
 089941C56007B1AFAB4CCE39A0E2B35D=Comentarios sobre las condiciones de uso del recurso
+660CB90F4B5280D702B3FAF9C3EDC7ED=Licencia del contenido
 A67670C5F1DB45ABB19AC5DBF158639E=Si se aplican restricciones de copyright o de otro tipo
 DF0E9B863737116A866D6CD83C49EFC4=Si el uso del recurso requiere remuneración
 
-# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.lom.TechnicalDetailsEditor
 
-3AFDDBF811A6F43C9501DC1FB78F8749=Características físicas del objeto de aprendizaje
 6FB04C380A1349F89E34CF3DF0CE9954=Duración del recurso
 A52DB90E89CC076D2ABE92F6F1B1867E=Ubicación del objeto de aprendizaje
 A8BB76932BEFC14A58036FDA76DF286A=Formatos y tipos multimédia
-BEE4E3AA0C747605A60835DD4098C95C=Características físicas
 E4DDFA8663F95D868D9736561E92EC31=Dirección web del objeto de aprendizaje
 
-# Messages from cat.xtec.merli.duc.client.editors.TargetEditorBinderImplGenMessages
-
-53A4EB77335DA05DEDFC640FBF87065A=Introduzca un nombre
-
-# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.taxa.CategoryEditor
 
 04B1A8782B511B70FE4175D59C15AF5F=Comentarios y observaciones adicionales
 263DF4303FC8E2F27499CAEFAD0C6F25=Observaciones
@@ -65,14 +58,48 @@ E4DDFA8663F95D868D9736561E92EC31=Dirección web del objeto de aprendizaje
 AF3C31C2D4FDBC1278808A16BF4BDF7C=Etiqueta de la categoría
 D95867DEADFE690E40F42068D6B59DF8=Referencias
 E199DCD77AF61CD1BE075E40C2F0CCC0=Tipo de recurso de aprendizaje
-F4D4F164C7DBE79D6ABC8CEED7B844C6=Categorias a las que pertenece el recurso
+F4D4F164C7DBE79D6ABC8CEED7B844C6=Categorias a las que pertenece el objeto
 FDA8AAB7C0A765E297A01E6B43D248D9=Significado y uso de la categoría
 
-# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditorBinderImplGenMessages
+# Messages from cat.xtec.merli.duc.client.editors.TargetEditor
 
-3DA6D0A3DA6B43B4E8C262C172F92239=Significado y uso
+53A4EB77335DA05DEDFC640FBF87065A=Introduzca un nombre
+
+# Messages from cat.xtec.merli.duc.client.editors.taxa.TermEditor
+
 4F69D635DD47CE8BAC67C94267CB4122=Tipo de término
 8165515D23A80788DD28A93CF4845E03=Significado y uso del término
 8E29CE067C5E4816794C661F522ACA99=Relaciones originadas por este término
-CA8D52FB5600ECEE01CE4FAC84AB748A=Términos de los que este objeto es una subclase
+CA8D52FB5600ECEE01CE4FAC84AB748A=Términos padre para este objeto
 E2BEE1660FD24C36252C8D0C63065FEF=Etiqueta del término
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContactEditor
+
+419EB7C0E6A2B89CC8C1CF995EB7CFFF=Nombre de la empresa o persona
+FFE48D7A819D6C1CDA62610113A94485=Identificador de usuario
+
+# Messages from cat.xtec.merli.duc.client.editors.type.ContributionEditor
+
+7F6E02D7E21EE08666EC76D6F8C65BAA=Fecha de la contribución
+91FF880ECE402545859E287A3620B7AC=Lista de contribuyentes
+E9EDDD29533F9538D5A8529FC43AC851=Tipo de contribución
+
+# Messages from cat.xtec.merli.duc.client.editors.type.IdentifierEditor
+
+914EE3C6298572057086966181B97E65=Identificador de catálogo
+
+# Messages from cat.xtec.merli.duc.client.portlets.FormPortlet
+
+62A26F3B213177A52F9835DE5AB144D6=Tiene cambios no guardados
+96A238708DFA82297FD54F639749CB14=Exportar la entidad
+9877BBB1E06F0D527D6DB7730B280808=Otras acciones
+C9CC8CCE247E49BAE79F15173CE97354=Guardar
+D2E31DD9C6B8C255917E6367FC955DAB=Suprimir la entidad
+DAA6B483E9F6CA081EC7E0B4A352F9E9=Guardar los cambios
+E593A17D32DFBE66F7DB69C340286355=Deshacer los cambios
+
+# Messages from cat.xtec.merli.duc.client.portlets.TreePortlet
+
+13348442CC6A27032D2B4AA28B75A5D3=Buscar
+686E697538050E4664636337CC3B834F=Crear
+AAB9285B511B639FA4CF3375ED57E948=Actualizar la vista
